DEMO Add presence button

--- a/app/index.jade
+++ b/app/index.jade
@@ -58,6 +58,11 @@ block navbar
 										| &nbsp;{{ui.settings.settings}}
 								li.divider
 								li
+									a(href='#presence')
+										i.glyphicon.glyphicon-flag
+										| &nbsp;Aanwezigheid
+								li.divider
+								li
 									a(href='#logout')
 										i.glyphicon.glyphicon-off
 										| &nbsp;{{ui.login.logout}}
