--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,6 +14,7 @@
 @import "app/entypo";
 @import "app/styles";
 @import "app/login";
+@import "app/logs";
 @import "app/dashboard";
 @import "app/forms";
 @import "app/frame";
