basic structure presence overview

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -2,6 +2,7 @@ section#dashboard
 	.page-header: h2 Dashboard
 	br
 	smart-alarming
+	presence-overview
 	snapshots
 	.row
 		article(class="{{(!browser.mobile) && 'col-sm-9' || 'col-sm-12'}}")
