Change to new branding (no images yet)

--- a/app/index.jade
+++ b/app/index.jade
@@ -141,13 +141,13 @@ block footer
 										a(ng-href='{{StandBy.config.profile.mobileApp.ios}}', target='itunes_store')
 											| Download iPhone App
 						li
-							img(src='images/standby_logo_footer.png', alt='StandBy Logo')
+							img(src='images/decentrale_logo_footer.png', alt='Decentrale Logo')
 						li
 							span.text-muted.footer-text
 								small
 									| Ask Community Systems, 2013 &nbsp; | &nbsp;&nbsp;
 									i
-										a(href='versions.html', target='_blank', style='color: #dddddd;') StandBy v{{StandBy.config.version}}
+										a(href='versions.html', target='_blank', style='color: #dddddd;') Decentrale v{{StandBy.config.version}}
 			p.text-muted.footer-text(ng-show='loading.status')
 				img(src='images/ajax-loader.gif')
 				small
