--- a/app/views/login/login-form.jade
+++ b/app/views/login/login-form.jade
@@ -8,7 +8,7 @@ ng-hide='views.help || views.changePass')
 			| {{ui.login.header}}
 		.alert(class="{{alert.login.type}}",
 		ng-show='alert.login.display')
-			button.close(type='button',
+			button.close(type='button',.
 			ng-click='alert.login=false') ×
 			| {{alert.login.message}}
 		input.form-control(type='text',
