Forgot conditional check

--- a/app/views/presence.jade
+++ b/app/views/presence.jade
@@ -1,5 +1,5 @@
 section#dashboard(style='margin-top: -20px;')
-	#logoWatermark
+	#logoWatermark(ng-show='StandBy.config.profile.presenceLogo')
 	.row
 		#availabilities.sa.widget.col-md-12
 			div.head
