--- a/app/views/profile.jade
+++ b/app/views/profile.jade
@@ -296,7 +296,7 @@ section#profile
 						.form-group.col-sm-5(ng-hide='StandBy.resources.role > 1 || views.user')
 							label {{ui.profile.password}}
 							.controls
-								input.form-control(type='text',
+								input.form-control(type='password',
 								ng-model='profilemeta.Password')
 								span.help-block(style='margin-top: -5px;')
 									small
