--- a/app/views/login/login-form.jade
+++ b/app/views/login/login-form.jade
@@ -38,5 +38,5 @@ ng-hide='views.help || views.changePass')
 				span &nbsp;|&nbsp;
 				a(ng-click='changeLanguage("nl")')
 					| Nederlands
-		img(src='images/standby_logo_small.png', alt='Decentrale Logo', ng-hide='StandBy.config.profile.own')
-		span.version: a(href='version.html', target='_blank') Decentrale v{{StandBy.config.version}}
+		img(src='images/standby_logo_small.png', alt='Teamtelefoon Logo', ng-hide='StandBy.config.profile.own')
+		span.version: a(href='version.html', target='_blank') Teamtelefoon v{{StandBy.config.version}}
