--- a/app/layout.jade
+++ b/app/layout.jade
@@ -6,7 +6,7 @@ doctype html
 head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-	title Decentrale Web
+	title Teamtelefoon Web
 	meta(name='description', content='')
 	meta(name='viewport', content='width=device-width')
 	block icons
