Show phone number in dashboard

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -1,5 +1,8 @@
 section#dashboard
-	.page-header: h2 Dashboard
+	.page-header
+		h2 Dashboard
+		.pull-right
+			h4 {{phoneNumberParsed.all.formatting.international}}
 	br
 	//- presence-overview
 	//- smart-alarming
